[rdbms commands] - update multiple database drivers to newer version for better product support
Signed-off-by: automike <mikeliucc@gmail.com>