@@ -185,6 +185,7 @@ fi
 # --------------------------------------------------------------------------------
 JAVA_OPT="${JAVA_OPT} -ea"
 JAVA_OPT="${JAVA_OPT} --add-opens=java.base/java.util=ALL-UNNAMED"
+JAVA_OPT="${JAVA_OPT} --add-opens=java.base/java.lang=ALL-UNNAMED"
 JAVA_OPT="${JAVA_OPT} -Xss24m"
 JAVA_OPT="${JAVA_OPT} -Dfile.encoding=UTF-8"
 # JAVA_OPT="${JAVA_OPT} -Djava.awt.headless=true"
